...
    @EnvironmentObject private var gridViewModel: GridViewModel
    @EnvironmentObject private var aiViewModel: AIViewModel
    var isGridDisabled: Bool {
        !gridViewModel.canContinue || gridViewModel.victoriousPlayer != nil
    }
    private var gridSize: CGFloat { CommonProperties.size.getMin(of: 82) }
    private let reset: () -> Void
    private var color: Color {
        if let player = gridViewModel.victoriousPlayer {
            return player.color
        }
        return gridViewModel.currentPlayer.color
    }
    private var message: String {
        if let player = gridViewModel.victoriousPlayer {
            return player.winMessage
        } else if gridViewModel.canContinue {
            return gridViewModel.currentPlayer.text
        }
        return "match nul"
...
