...
                    VictoriousLineShape(line)
                        .opacity(0.5)
                    VictoriousLineShape(line)
                        .stroke(lineWidth: CommonProperties.size.getMin(of: 1))
                }
                .foregroundColor(player.color)
                .accessibility(identifier: "victoryLine")
            }
        }
    }
}

// MARK: - The Shape
...
